--- a/index.html
+++ b/index.html
@@ -566,181 +566,93 @@
             </div>
         </div>
     </section>
-
-    <section id="personnalites" class="py-20 relative">
-        <div class="absolute inset-0 bg-gradient-to-b from-transparent via-benin-red/5 to-transparent"></div>
-        <div class="container mx-auto px-4 relative z-10">
-            <div class="text-center mb-12">
-                <h2 class="text-3xl sm:text-4xl font-bold mb-4">
-                    <span class="text-gradient">Personnalités Indexées</span>
-                </h2>
-                <p class="text-gray-400 max-w-2xl mx-auto">
-                    Officiers publics et auxiliaires de justice impliqués dans des actes attentatoires
-                    à la foi publique, avec photos et biographies.
-                </p>
+<section id="personnalites" class="py-20 relative">
+    <div class="absolute inset-0 bg-gradient-to-b from-transparent via-benin-red/5 to-transparent"></div>
+    <div class="container mx-auto px-4 relative z-10">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl sm:text-4xl font-bold mb-4">
+                <span class="text-gradient">Personnalités Indexées</span>
+            </h2>
+            <p class="text-gray-400 max-w-2xl mx-auto">
+                Officiers publics et auxiliaires de justice impliqués dans des actes attentatoires 
+                à la foi publique.
+            </p>
+        </div>
+        
+        <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+            <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300">
+                <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
+                <div class="p-6">
+                    <div class="flex flex-col items-center text-center mb-4">
+                        <img src="assets/Aubierge Hungbo Kploca.jpg.JPG" class="h-24 w-24 rounded-full object-cover mb-4 border-2 border-dark-border shadow-lg" alt="Aubierge Hungbo Kploca" onerror="this.src='https://ui-avatars.com/api/?name=Aubierge+Kploca&background=2a3d32&color=fff'">
+                        <h3 class="font-semibold text-lg">Aubierge Hungbo Kploca</h3>
+                        <span class="text-sm text-gray-400">Magistrate</span>
+                    </div>
+                    <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
+                        "Signataire du jugement 114/14 constatant le legs d'une parcelle inexistante."
+                    </p>
+                </div>
             </div>
 
-            <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-4">
-                <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300 cursor-pointer">
-                    <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
-                    <div class="p-6">
-                        <div class="flex flex-col items-center text-center mb-4">
-                            <img src="assets/votre-photo.jpg" class="h-20 w-20 rounded-full object-cover mb-4 border-2 border-benin-red shadow-lg" alt="Aubierge Hungbo Kploca">
-                            <h3 class="font-semibold text-lg">Aubierge Hungbo Kploca</h3>
-                            <div class="flex items-center gap-2 mt-2">
-                                <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
-                                <span class="text-sm text-gray-400">Magistrate</span>
-                            </div>
-                        </div>
-                        <div class="space-y-3">
-                            <div class="flex items-center justify-between">
-                                <span class="px-2 py-1 text-xs rounded-full status-open">Actif</span>
-                                <div class="flex items-center gap-1 text-sm text-benin-red">
-                                    <i data-lucide="alert-triangle" class="h-4 w-4"></i>
-                                    <span>1 cas</span>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-2 text-sm">
-                                <i data-lucide="building-2" class="h-4 w-4 text-gray-400 flex-shrink-0 mt-0.5"></i>
-                                <span class="text-gray-400">Tribunal de Cotonou - 3ème Chambre</span>
-                            </div>
-                            <div class="p-3 bg-dark-muted/50 rounded-lg">
-                                <p class="text-xs text-gray-400 italic">
-                                    "Signataire du jugement 114/14/3ème CH-EP constatant le legs d'une parcelle inexistante."
-                                </p>
-                            </div>
-                        </div>
+            <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300">
+                <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
+                <div class="p-6">
+                    <div class="flex flex-col items-center text-center mb-4">
+                        <img src="assets/Balley.jpeg.JPG" class="h-24 w-24 rounded-full object-cover mb-4 border-2 border-dark-border shadow-lg" alt="Félix A. Balley" onerror="this.src='https://ui-avatars.com/api/?name=Felix+Balley&background=2a3d32&color=fff'">
+                        <h3 class="font-semibold text-lg">Félix A. BALLEY</h3>
+                        <span class="text-sm text-gray-400">Notaire</span>
                     </div>
+                    <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
+                        "Signataire du certificat d'acquit avec une date de décès erronée de 6 ans."
+                    </p>
                 </div>
+            </div>
 
-                <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300 cursor-pointer">
-                    <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
-                    <div class="p-6">
-                        <div class="flex flex-col items-center text-center mb-4">
-                            <div class="h-20 w-20 rounded-full bg-dark-muted flex items-center justify-center mb-4 border-2 border-dark-border text-2xl font-bold">
-                                FB
-                            </div>
-                            <h3 class="font-semibold text-lg">Félix A. BALLEY</h3>
-                            <div class="flex items-center gap-2 mt-2">
-                                <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
-                                <span class="text-sm text-gray-400">Notaire</span>
-                            </div>
-                        </div>
-                        <div class="space-y-3">
-                            <div class="flex items-center justify-between">
-                                <span class="px-2 py-1 text-xs rounded-full status-open">Actif</span>
-                                <div class="flex items-center gap-1 text-sm text-benin-red">
-                                    <i data-lucide="alert-triangle" class="h-4 w-4"></i>
-                                    <span>1 cas</span>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-2 text-sm">
-                                <i data-lucide="building-2" class="h-4 w-4 text-gray-400 flex-shrink-0 mt-0.5"></i>
-                                <span class="text-gray-400">Étude Notariale BALLEY</span>
-                            </div>
-                            <div class="p-3 bg-dark-muted/50 rounded-lg">
-                                <p class="text-xs text-gray-400 italic">
-                                    "Signataire du certificat d'acquit avec date de décès erronée et mandat inexistant."
-                                </p>
-                            </div>
-                        </div>
+            <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300">
+                <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
+                <div class="p-6">
+                    <div class="flex flex-col items-center text-center mb-4">
+                        <img src="assets/Fade.jpeg.JPG" class="h-24 w-24 rounded-full object-cover mb-4 border-2 border-dark-border shadow-lg" alt="Victorien Fade" onerror="this.src='https://ui-avatars.com/api/?name=Victorien+Fade&background=2a3d32&color=fff'">
+                        <h3 class="font-semibold text-lg">Victorien Fade</h3>
+                        <span class="text-sm text-gray-400">Avocat</span>
                     </div>
+                    <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
+                        "Triple conflit d'intérêts: mandataire, avocat adverse et émetteur de signification."
+                    </p>
                 </div>
+            </div>
 
-                <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300 cursor-pointer">
-                    <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
-                    <div class="p-6">
-                        <div class="flex flex-col items-center text-center mb-4">
-                            <div class="h-20 w-20 rounded-full bg-dark-muted flex items-center justify-center mb-4 border-2 border-dark-border text-2xl font-bold">
-                                VF
-                            </div>
-                            <h3 class="font-semibold text-lg">Victorien Fade</h3>
-                            <div class="flex items-center gap-2 mt-2">
-                                <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
-                                <span class="text-sm text-gray-400">Avocat</span>
-                            </div>
-                        </div>
-                        <div class="space-y-3">
-                            <div class="flex items-center justify-between">
-                                <span class="px-2 py-1 text-xs rounded-full status-open">Actif</span>
-                                <div class="flex items-center gap-1 text-sm text-benin-red">
-                                    <i data-lucide="alert-triangle" class="h-4 w-4"></i>
-                                    <span>1 cas</span>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-2 text-sm">
-                                <i data-lucide="building-2" class="h-4 w-4 text-gray-400 flex-shrink-0 mt-0.5"></i>
-                                <span class="text-gray-400">Cabinet FADE</span>
-                            </div>
-                            <div class="p-3 bg-dark-muted/50 rounded-lg">
-                                <p class="text-xs text-gray-400 italic">
-                                    "Triple conflit d'intérêts non déclaré: mandataire, avocat adverse, émetteur de signification."
-                                </p>
-                            </div>
-                        </div>
+            <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300">
+                <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
+                <div class="p-6">
+                    <div class="flex flex-col items-center text-center mb-4">
+                        <img src="assets/Hounkponou.jpeg.JPG" class="h-24 w-24 rounded-full object-cover mb-4 border-2 border-dark-border shadow-lg" alt="Luciano Hounkponou" onerror="this.src='https://ui-avatars.com/api/?name=Luciano+Hounkponou&background=2a3d32&color=fff'">
+                        <h3 class="font-semibold text-lg">Luciano Hounkponou</h3>
+                        <span class="text-sm text-gray-400">Président APDP</span>
                     </div>
+                    <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
+                        "Responsable de l'autorité de protection des données mise en cause."
+                    </p>
                 </div>
+            </div>
 
-                <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300 cursor-pointer">
-                    <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
-                    <div class="p-6">
-                        <div class="flex flex-col items-center text-center mb-4">
-                            <div class="h-20 w-20 rounded-full bg-dark-muted flex items-center justify-center mb-4 border-2 border-dark-border text-2xl font-bold">
-                                LH
-                            </div>
-                            <h3 class="font-semibold text-lg">Luciano Hounkponou</h3>
-                            <div class="flex items-center gap-2 mt-2">
-                                <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
-                                <span class="text-sm text-gray-400">Avocat / Président APDP</span>
-                            </div>
-                        </div>
-                        <div class="space-y-3">
-                            <div class="flex items-center justify-between">
-                                <span class="px-2 py-1 text-xs rounded-full status-open">Actif</span>
-                                <div class="flex items-center gap-1 text-sm text-benin-red">
-                                    <i data-lucide="alert-triangle" class="h-4 w-4"></i>
-                                    <span>1 cas</span>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-2 text-sm">
-                                <i data-lucide="building-2" class="h-4 w-4 text-gray-400 flex-shrink-0 mt-0.5"></i>
-                                <span class="text-gray-400">Autorité Pour la Protection des Données Personnelle (APDP)</span>
-                            </div>
-                        </div>
+            <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300">
+                <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
+                <div class="p-6">
+                    <div class="flex flex-col items-center text-center mb-4">
+                        <img src="assets/bellocentif.jpeg.JPG" class="h-24 w-24 rounded-full object-cover mb-4 border-2 border-dark-border shadow-lg" alt="Abdou Rafiou Bello" onerror="this.src='https://ui-avatars.com/api/?name=Abdou+Bello&background=2a3d32&color=fff'">
+                        <h3 class="font-semibold text-lg">Abdou Rafiou Bello</h3>
+                        <span class="text-sm text-gray-400">Président CENTIF</span>
                     </div>
-                </div>
-
-                <div class="glass-card rounded-xl overflow-hidden hover:border-benin-red/50 transition-all duration-300 cursor-pointer">
-                    <div class="h-1 bg-gradient-to-r from-benin-red via-benin-yellow to-benin-green"></div>
-                    <div class="p-6">
-                        <div class="flex flex-col items-center text-center mb-4">
-                            <div class="h-20 w-20 rounded-full bg-dark-muted flex items-center justify-center mb-4 border-2 border-dark-border text-2xl font-bold">
-                                AB
-                            </div>
-                            <h3 class="font-semibold text-lg">Abdou Rafiou Bello</h3>
-                            <div class="flex items-center gap-2 mt-2">
-                                <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
-                                <span class="text-sm text-gray-400">Président CENTIF</span>
-                            </div>
-                        </div>
-                        <div class="space-y-3">
-                            <div class="flex items-center justify-between">
-                                <span class="px-2 py-1 text-xs rounded-full status-open">Actif</span>
-                                <div class="flex items-center gap-1 text-sm text-benin-red">
-                                    <i data-lucide="alert-triangle" class="h-4 w-4"></i>
-                                    <span>1 cas</span>
-                                </div>
-                            </div>
-                            <div class="flex items-start gap-2 text-sm">
-                                <i data-lucide="building-2" class="h-4 w-4 text-gray-400 flex-shrink-0 mt-0.5"></i>
-                                <span class="text-gray-400">Centif</span>
-                            </div>
-                        </div>
-                    </div>
+                    <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
+                        "Responsable de la cellule de traitement du renseignement financier."
+                    </p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <section id="documents" class="py-20 relative">
         <div class="absolute inset-0 bg-gradient-to-b from-transparent via-benin-green/5 to-transparent"></div>
