Update statements for various individuals in index.html

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                         <span class="text-sm text-gray-400">Notaire</span>
                     </div>
                     <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
-                        "Signataire du certificat d'acquit avec une date de décès erronée de 6 ans."
+                        "Fraude : obtention et usage d'un certificat d'acquit avec une date de décès erronée de 6 ans et mandataire sans mandat."
                     </p>
                 </div>
             </div>
@@ -617,7 +617,7 @@
                         <span class="text-sm text-gray-400">Avocat</span>
                     </div>
                     <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
-                        "Triple conflit d'intérêts: mandataire, avocat adverse et émetteur de signification."
+                        "Triple conflit d'intérêts: mandataire, avocat adverse et usage de faux en écriture publique."
                     </p>
                 </div>
             </div>
@@ -631,7 +631,7 @@
                         <span class="text-sm text-gray-400">Président APDP</span>
                     </div>
                     <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
-                        "Responsable de l'autorité de protection des données mise en cause."
+                        "Violation ostentatoire de la loi sur le numérique dans le dossier 2024 010 DST SCC CJT au préjudice de la victime supposée protégée."
                     </p>
                 </div>
             </div>
@@ -645,7 +645,7 @@
                         <span class="text-sm text-gray-400">Président CENTIF</span>
                     </div>
                     <p class="text-xs text-gray-400 italic bg-dark-muted/50 p-3 rounded-lg">
-                        "Responsable de la cellule de traitement du renseignement financier."
+                        "Violation de l'article 39 CPP."
                     </p>
                 </div>
             </div>
