Update DOCTYPE declaration in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Intègre toutes les modifications pertinentes précédentes dans le code ci-dessous, sans autre modification : <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
