Update download link in index.html

--- a/index.html
+++ b/index.html
@@ -754,8 +754,12 @@
                         <button class="flex-1 px-3 py-2 text-sm rounded-lg border border-dark-border hover:bg-dark-muted transition-all">
                             <i data-lucide="eye" class="h-4 w-4 inline mr-2"></i>Aperçu
                         </button>
-                        <a href="https://www.dropbox.com/scl/fo/h5hm9xx217epxwphy0ls3/AEywUNPsAobdCjbXyyaexlI?rlkey=q2dgukntqw1sw4zjv6sypl952&st=4w13cegh&dl=0" target="_blank" class="flex-1 px-3 py-2 text-sm rounded-lg bg-benin-green text-white text-center hover:bg-benin-green/90 transition-all">
-                            <i data-lucide="download" class="h-4 w-4 inline mr-2"></i>Télécharger
+                        <a href="https://www.dropbox.com/scl/fo/g27mo8rf9c7kmkksx7p5u/AJ0kH2AvV1mui9lzSUkA0pM?rlkey=idci7qjwjywg0kq4sr6isn4sn&st=rudyhdk1&dl=0" 
+   target="_blank" 
+   class="flex-1 px-3 py-2 text-sm rounded-lg bg-benin-green text-white text-center hover:bg-benin-green/90 transition-all">
+    <i data-lucide="download" class="h-4 w-4 inline mr-2"></i>Télécharger
+</a>
+
                         </a>
                     </div>
                 </div>
