Update job title and description in index.html

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                             <h3 class="font-semibold text-lg">Avocat FADE</h3>
                             <div class="flex items-center gap-2 mt-2">
                                 <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
-                                <span class="text-sm text-gray-400">Auxiliaire de Justice</span>
+                                <span class="text-sm text-gray-400">Avocat</span>
                             </div>
                         </div>
                         <div class="space-y-3">
@@ -703,7 +703,7 @@
                                 </div>
                             </div>
                             <p class="text-xs text-gray-400">
-                                Triple conflit d'intérêts non déclaré et usage de faux acte authentique
+                                Triple conflit d'intérêts et usage de faux acte authentique
                             </p>
                         </div>
                     </div>
