Update lawyer name from 'Avocat FADE' to 'Victorien FADE'

--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                             <div class="h-20 w-20 rounded-full object-cover mb-4 border-2 border-benin-red bg-benin-red/20 flex items-center justify-center">
                                 <i data-lucide="user" class="h-10 w-10 text-benin-red"></i>
                             </div>
-                            <h3 class="font-semibold text-lg">Avocat FADE</h3>
+                            <h3 class="font-semibold text-lg"> Victorien FADE</h3>
                             <div class="flex items-center gap-2 mt-2">
                                 <i data-lucide="briefcase" class="h-4 w-4 text-gray-400"></i>
                                 <span class="text-sm text-gray-400">Avocat</span>
