Update text in index.html for accuracy

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                                 </div>
                             </div>
                             <p class="text-xs text-gray-400">
-                                Signataire du jugement 114/14/3ème CH-EP du 31 octobre 2014
+                                Elle a constaté comme vrai des fais faux dans son jugement 114/14/3ème CH-EP du 31 octobre 2014
                             </p>
                         </div>
                     </div>
